--- a/src/main/webapp/app/entities/points/points-dialog.component.html
+++ b/src/main/webapp/app/entities/points/points-dialog.component.html
@@ -28,21 +28,30 @@
                 </small>
             </div>
         </div>
-        <div class="form-group">
-            <label class="form-control-label" jhiTranslate="jhprojApp.points.exercise" for="field_exercise">Exercise</label>
-            <input type="number" class="form-control" name="exercise" id="field_exercise"
-                [(ngModel)]="points.exercise"  />
+        <div class="form-check">
+            <label class="form-check-label" for="field_exercise">
+                <input type="checkbox" class="form-check-input" name="exercise"
+                    id="field_exercise" [(ngModel)]="points.exercise"/>
+                <span jhiTranslate="jhprojApp.points.exercise">Exercise</span>
+            </label>
         </div>
-        <div class="form-group">
-            <label class="form-control-label" jhiTranslate="jhprojApp.points.meals" for="field_meals">Meals</label>
-            <input type="number" class="form-control" name="meals" id="field_meals"
-                [(ngModel)]="points.meals"  />
+
+        <div class="form-check">
+            <label class="form-check-label" for="field_meals">
+                <input type="checkbox" class="form-check-input" name="meals"
+                id="field_meals" [(ngModel)]="points.meals"/>
+                <span jhiTranslate="jhprojApp.points.meals">Meals</span>
+            </label>
         </div>
-        <div class="form-group">
-            <label class="form-control-label" jhiTranslate="jhprojApp.points.alcohol" for="field_alcohol">Alcohol</label>
-            <input type="number" class="form-control" name="alcohol" id="field_alcohol"
-                [(ngModel)]="points.alcohol"  />
+
+        <div class="form-check">
+            <label class="form-check-label" for="field_alcohol">
+            <input type="checkbox" class="form-check-input" name="alcohol"
+                id="field_alcohol" [(ngModel)]="points.alcohol"/>
+                <span jhiTranslate="jhprojApp.points.alcohol">Alcohol</span>
+            </label>
         </div>
+
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="jhprojApp.points.notes" for="field_notes">Notes</label>
             <input type="text" class="form-control" name="notes" id="field_notes"
