--- a/src/main/webapp/app/entities/points/points.component.html
+++ b/src/main/webapp/app/entities/points/points.component.html
@@ -1,39 +1,58 @@
 <div>
-    <h2>
-        <span jhiTranslate="jhprojApp.points.home.title">Points</span>
-        <button class="btn btn-primary float-right jh-create-entity create-points" [routerLink]="['/', { outlets: { popup: ['points-new'] } }]">
-            <span class="fa fa-plus"></span>
-            <span  jhiTranslate="jhprojApp.points.home.createLabel">
-            Create new Points
-            </span>
-        </button>
-    </h2>
     <jhi-alert></jhi-alert>
     <div class="row">
+        <div class="col-sm-8">
+            <h2 jhiTranslate="jhprojApp.points.home.title">Points</h2>
+        </div>
+        <div class="col-sm-4 text-right">
+            <button class="btn btn-primary float-right create-points" [routerLink]="['/', { outlets: { popup: ['points-new'] } }]" [ngbTooltip]="addTooltip" placement="bottom">
+                <span class="fa fa-plus"></span>
+                <ng-template #addTooltip>
+                    <span jhiTranslate="jhprojApp.points.home.createLabel">Add Points</span>
+                </ng-template>
+            </button>
+            <form name="searchForm" class="form-inline">
+                <div class="input-group w-100 mr-1">
+                    <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'jhprojApp.points.home.search' | translate }}">
+                    <button class="input-group-addon btn btn-info" (click)="search(currentSearch)">
+                        <span class="fa fa-search"></span>
+                    </button>
+                    <button class="input-group-addon btn btn-danger" (click)="clear()" *ngIf="currentSearch">
+                        <span class="fa fa-trash-o"></span>
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
     <br/>
     <div class="table-responsive" *ngIf="points">
-        <table class="table table-striped">
+        <table class="table table-striped table-sm">
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="date"><span jhiTranslate="jhprojApp.points.date">Date</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="exercise"><span jhiTranslate="jhprojApp.points.exercise">Exercise</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="meals"><span jhiTranslate="jhprojApp.points.meals">Meals</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="alcohol"><span jhiTranslate="jhprojApp.points.alcohol">Alcohol</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="notes"><span jhiTranslate="jhprojApp.points.notes">Notes</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="user.login"><span jhiTranslate="jhprojApp.points.user">User</span> <span class="fa fa-sort"></span></th>
-            <th></th>
+                <th jhiSortBy="date"><span jhiTranslate="jhprojApp.points.date">Date</span> <span class="fa fa-sort"></span></th>
+                <th jhiSortBy="exercise"><span jhiTranslate="jhprojApp.points.exercise">Exercise</span> <span class="fa fa-sort"></span></th>
+                <th jhiSortBy="meals"><span jhiTranslate="jhprojApp.points.meals">Meals</span> <span class="fa fa-sort"></span></th>
+                <th jhiSortBy="alcohol"><span jhiTranslate="jhprojApp.points.alcohol">Alcohol</span> <span class="fa fa-sort"></span></th>
+                <th jhiSortBy="notes"><span jhiTranslate="jhprojApp.points.notes">Notes</span> <span class="fa fa-sort"></span></th>
+                <th jhiSortBy="user.login" class="text-nowrap"><span jhiTranslate="jhprojApp.points.user">User</span> <span class="fa fa-sort"></span></th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let points of points ;trackBy: trackId">
-                <td><a [routerLink]="['../points', points.id ]">{{points.id}}</a></td>
-                <td>{{points.date | date:'mediumDate'}}</td>
-                <td>{{points.exercise}}</td>
-                <td>{{points.meals}}</td>
-                <td>{{points.alcohol}}</td>
-                <td>{{points.notes}}</td>
+                <td class="text-nowrap"><a [routerLink]="['../points', points.id ]">{{points.date | date:'mediumDate'}}</a></td>
+                <td class="text-center">
+                    <i class="fa fa-{{points.exercise ? 'check text-success' : 'times text-danger'}}" aria-hidden="true"></i>
+                </td>
+                <td class="text-center">
+                    <i class="fa fa-{{points.meals ? 'check text-success' : 'times text-danger'}}" aria-hidden="true"></i>
+                </td>
+                <td class="text-center">
+                    <i class="fa fa-{{points.alcohol ? 'check text-success' : 'times text-danger'}}" aria-hidden="true"></i>
+                </td>
+                <td>
+                    <div class="truncate" [ngbPopover]="points.notes">{{points.notes}}</div>
+                </td>
                 <td>
                     {{points.user?.login}}
                 </td>
@@ -43,21 +62,21 @@
                                 [routerLink]="['../points', points.id ]"
                                 class="btn btn-info btn-sm">
                             <span class="fa fa-eye"></span>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
+                            <span class="hidden-md-down" jhiTranslate="entity.action.view">View</span>
                         </button>
                         <button type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'points/'+ points.id + '/edit'} }]"
                                 replaceUrl="true"
                                 class="btn btn-primary btn-sm">
                             <span class="fa fa-pencil"></span>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
+                            <span class="hidden-md-down" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
                         <button type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'points/'+ points.id + '/delete'} }]"
                                 replaceUrl="true"
                                 class="btn btn-danger btn-sm">
                             <span class="fa fa-remove"></span>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
+                            <span class="hidden-md-down" jhiTranslate="entity.action.delete">Delete</span>
                         </button>
                     </div>
                 </td>
@@ -65,12 +84,12 @@
             </tbody>
         </table>
     </div>
-        <div *ngIf="points && points.length">
-            <div class="row justify-content-center">
-                <jhi-item-count [page]="page" [total]="queryCount" [itemsPerPage]="itemsPerPage"></jhi-item-count>
-            </div>
-            <div class="row justify-content-center">
-                <ngb-pagination [collectionSize]="totalItems" [(page)]="page" (pageChange)="loadPage(page)"></ngb-pagination>
-            </div>
+    <div *ngIf="points && points.length">
+        <div class="row justify-content-center">
+            <jhi-item-count [page]="page" [total]="queryCount" [itemsPerPage]="itemsPerPage"></jhi-item-count>
         </div>
+        <div class="row justify-content-center">
+            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" (pageChange)="loadPage(page)"></ngb-pagination>
+        </div>
+    </div>
 </div>
