--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -211,3 +211,13 @@ ui bootstrap tweaks
 }
 
 /* jhipster-needle-scss-add-main JHipster will add new css style */
+
+
+/* ==========================================================================
+CSS
+========================================================================== */
+.container-fluid {
+border: 1px solid green;
+}
+
+
